--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background-image: url('https://raw.githubusercontent.com/SINESH2004/burgerWeb-Images/main/Background-image.jpeg');
+    background-size: cover;
+    height: 100vh;
+}
