--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -8,9 +8,9 @@
 
         </div>
         <div class="col">
-            <input type="text" name="username" placeholder="Username">
+            <input id="UsernameID" type="text" name="username" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
-            <button type="button" class="btn btn-success">Log in</button>
+            <button id="LoginBtn" type="button" class="btn btn-success">Log in</button>
         </div>
     </div>
 </div>
