Setting up routing and setting the background image correctly

--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,5 +1,5 @@
-body {
-    background-image: url('src\resources\images\Edited.png');
+.background-image {
+    background-image: url("./images/BackgroundImage.png");
     background-size: cover;
     height: 100vh;
 }
