--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,16 +1,19 @@
-<div class="container">
-    <div class="row">
-        <p class="WebName">MOS Burgers</p>
-    </div>
-    <div class="row">
-
-        <div class="col">
-
+<div class="background-image">
+    <div class="container">
+        <div class="row">
+            <p class="WebName">MOS Burgers</p>
         </div>
-        <div class="col">
-            <input id="UsernameID" type="text" name="username" placeholder="Username">
-            <input type="password" name="password" placeholder="Password">
-            <button id="LoginBtn" type="button" class="btn btn-success">Log in</button>
+        <div class="row">
+
+            <div class="col">
+
+            </div>
+            <div class="col">
+                <input id="UsernameID" type="text" name="username" placeholder="Username">
+                <input type="password" name="password" placeholder="Password">
+                <button id="LoginBtn" type="button" class="btn btn-success">Log in</button>
+            </div>
         </div>
     </div>
 </div>
+<router-outlet></router-outlet>
